--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
 음식을 주제로 <b>>좋아하는 음식</b>과 <b>싫어하는 음식</b>을 정했다</br>
 좋아하는 음식과 싫어하는 음식들이 무엇이 있는지 생각했다</br>
 마인드 맵을 완성했다</br>
-음식을 주제로 마인드 맵을 완성한 것을 보고 뿌듯하였다.
+음식을 주제로 </i>마인드 맵</i>을 완성한 것을 보고 뿌듯하였다.
