--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@
 좋아하는 음식과 싫어하는 음식들이 무엇이 있는지 생각했다</br>
 마인드 맵을 완성했다</br>
 음식을 주제로 <i>마인드 맵</i>을 완성한 것을 보고 뿌듯하였다.
-<img syc="me.jmg"/>
+<img src="me.jmg"/>
