--- a/music.html
+++ b/music.html
@@ -1,3 +1,9 @@
-<h1>악기이름</h1>
+<h1>오보에</h1>
 <br/>
-악기내용
+악기의 역사:16세기 후반에서 17세기 초반까지 활동한<br/>
+ 프랑스의 악기 제작 기문들인 오트테르와 필리도르가 오보에를 만들었었다<br/>
+ <br/>
+ 연주 방법:척추를 세우고,턱을 바르게 한 다음 다리를 어깨 넓이로 벌린 후<br/>
+ 중심을 잡은 뒤 두 손으로 오보에를 잡고 입으로 분다.<br/>
+ <br/>
+ 특징:원추관의 위끝에 2개의 리드른 지닌 목관악기 이다.
