--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
 좋아하는 음식과 싫어하는 음식이 무엇이 있는지 생각했다<br/>
 마인드 맵을 완성했다<br/>
 음식을 주제로 마인드 맵을 완성한 것을 보고 뿌듯했다<br/>
-img style="width:50%" 
-src="me.jpg"
+<img style="width:50%" 
+src="me.jpg"/>
