--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<button>알림</button><br/>
-
+<button>알림</button>
+<br/>
 <img style="width:50%" 
 src="me.jpg"/>
+
+
+<script>alert?:(안녕하세요)</script>
