--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<button>알림</button>
+<button>알림<script>alert('안녕하세요')</script></button>
 <br/>
 <img style="width:50%" 
 src="me.jpg"/>
 
 
-<script>alert("안녕하세요")</script>
