--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<button>알림<script>alert('안녕하세요')</script></button>
+<button> onclick=<script>alert('안녕하세요')</script>알림</button>
 <br/>
 <img style="width:50%" 
 src="me.jpg"/>
